# stm32-mw-openbl

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.html  LICENSE.md  README.html  README.md  Release_Notes.html  Release_Notes.md  STMicroelectronics.open_bootloader.pdsc  STMicroelectronics.open_bootloader.sha1  SW_Security_Level.md  sbom_cdx.json
.config/: STMicroelectronics.open_bootloader.gpdsc.hbs  gen_code.bat  gen_code.sh  openbootloader_config_parameters.json
.config/template/: mx_openbl_template.c.hbs  mx_openbl_template.h.hbs  mx_openbl_user_template.c.hbs  mx_openbl_user_template.h.hbs  openbl_conf_template.h.hbs
.config/template/helpers/: openbootloader_helpers.js
.config/template/license/: mx_open_bootloader_license_template.md.hbs
.config/template/partials/: LICENSE_partial.hbs
.github/: PULL_REQUEST_TEMPLATE.md
Core/: openbl_core.c  openbl_core.h
Interfaces/Patterns/: interfaces_conf.h  platform.h
Interfaces/Patterns/COMMON/: common_interface.c
Interfaces/Patterns/FDCAN/: fdcan_interface.c
Interfaces/Patterns/FLASH/: flash_interface.c  flash_interface.h
Interfaces/Patterns/I2C/: i2c_interface.c  i2c_interface.h
Interfaces/Patterns/I3C/: i3c_interface.c
Interfaces/Patterns/OPTION BYTES/: optionbytes_interface.c  optionbytes_interface.h
Interfaces/Patterns/OTP/: otp_interface.c
Interfaces/Patterns/RAM/: ram_interface.c  ram_interface.h
Interfaces/Patterns/SPI/: spi_interface.c  spi_interface.h
Interfaces/Patterns/USART/: usart_interface.c  usart_interface.h
Interfaces/Patterns/USB/: usb_interface.c  usb_interface.h
Interfaces/Templates/: interfaces_conf.h  openbootloader_conf.h
Interfaces/Templates/COMMON/: common_interface.c  common_interface.h
Interfaces/Templates/ENGI BYTES/: engibytes_interface.c  engibytes_interface.h
Interfaces/Templates/FDCAN/: fdcan_interface.c  fdcan_interface.h
Interfaces/Templates/FLASH/: flash_interface.c
Interfaces/Templates/I2C/: i2c_interface.c
Interfaces/Templates/IWDG/: iwdg_interface.h
Interfaces/Templates/OPTION BYTES/: optionbytes_interface.c
Interfaces/Templates/OTP/: otp_interface.c  otp_interface.h
Interfaces/Templates/RAM/: ram_interface.c
Interfaces/Templates/SPI/: spi_interface.c
Interfaces/Templates/SYSTEM MEMORY/: systemmemory_interface.h
Interfaces/Templates/USART/: usart_interface.c
Interfaces/Templates/USB/: usb_interface.c
Modules/CAN/: openbl_can_cmd.c  openbl_can_cmd.h
Modules/FDCAN/: openbl_fdcan_cmd.c  openbl_fdcan_cmd.h
Modules/I2C/: openbl_i2c_cmd.c  openbl_i2c_cmd.h
Modules/Mem/: openbl_mem.c  openbl_mem.h
Modules/SPI/: openbl_spi_cmd.c  openbl_spi_cmd.h
Modules/USART/: openbl_usart_cmd.c  openbl_usart_cmd.h
Modules/USB/: openbl_usb_cmd.c  openbl_usb_cmd.h
STM32_USB_Device_Library/: Release_Notes.html  Release_Notes.md
STM32_USB_Device_Library/Class/DFU/Inc/: usbd_dfu.h  usbd_dfu_media_template.h
STM32_USB_Device_Library/Class/DFU/Src/: usbd_dfu.c
STM32_USB_Device_Library/Core/Inc/: usbd_conf_template.h  usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_ioreq.h
Util/: openbl_util.c  openbl_util.h
core/: openbl_commands.h  openbl_core.c  openbl_core.h  openbl_interfaces.h  openbl_types.h
interfaces/: openbl_itf_common.c  openbl_itf_common.h  openbl_itf_i2c.c  openbl_itf_i2c.h  openbl_itf_iwdg.c  openbl_itf_iwdg.h  openbl_itf_spi.c  openbl_itf_spi.h  openbl_itf_usart.c  openbl_itf_usart.h  openbl_itf_usb.c  openbl_itf_usb.h
interfaces/stm32c5xx/: openbl_common.c  openbl_flash.h  openbl_hw_defs.h  openbl_i2c.h  openbl_itf_eeprom.c  openbl_itf_eeprom.h  openbl_itf_engibytes.c  openbl_itf_engibytes.h  openbl_itf_flash.c  openbl_itf_flash.h  openbl_itf_optionbytes.c  openbl_itf_optionbytes.h  openbl_itf_otp.c  openbl_itf_otp.h  openbl_itf_ram.c  openbl_itf_ram.h  openbl_itf_read_only.c  openbl_itf_read_only.h  openbl_itf_systemmemory.c  openbl_itf_systemmemory.h  openbl_iwdg.h  openbl_spi.h  openbl_usart.h  openbl_usb_dfu.c  openbl_usb_dfu.h  openbl_usb_dfu_descriptors.c  openbl_usb_dfu_descriptors.h
modules/i2c/: openbl_i2c_cmd.c  openbl_i2c_cmd.h
modules/mem/: openbl_mem.c  openbl_mem.h
modules/spi/: openbl_spi_cmd.c  openbl_spi_cmd.h
modules/usart/: openbl_usart_cmd.c  openbl_usart_cmd.h
modules/usb/: openbl_usb_cmd.c  openbl_usb_cmd.h
